compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_local_variable_with_pattern.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\nrecord Wibble {\n  Wibble(a: Int, b: Int, c: Int)\n}\n\npub fn main() {\n  let Wibble(a, b, c) = Wibble(1, 2, 3)\n}\n"
---
----- BEFORE ACTION

record Wibble {
  Wibble(a: Int, b: Int, c: Int)
}

pub fn main() {
  let Wibble(a, b, c) = Wibble(1, 2, 3)
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑                
}


----- AFTER ACTION

record Wibble {
  Wibble(a: Int, b: Int, c: Int)
}

pub fn main() {
  let Wibble(a, b, c): Wibble = Wibble(1, 2, 3)
}
