compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_local_variable_with_pattern2.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1776
expression: "\npub fn main(values) {\n  let #(left, right) = values\n}\n"
---
----- BEFORE ACTION

pub fn main(values) {
  let #(left, right) = values
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑       
}


----- AFTER ACTION

pub fn main(values) {
  let #(left, right): #(a, b) = values
}
