compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__annotate_nested_local_variable.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1806
expression: "\npub fn main() {\n  let a = {\n    let b = 10\n    b + 1\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let a = {
    let b = 10
    ▔▔▔▔↑     
    b + 1
  }
}


----- AFTER ACTION

pub fn main() {
  let a = {
    let b: Int = 10
    b + 1
  }
}
