compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__assign_unused_result.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1132
expression: "\npub fn main() {\n    Ok(0)\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    Ok(0)
    ▔▔↑  
    Nil
}


----- AFTER ACTION

pub fn main() {
    let _ = Ok(0)
    Nil
}
