compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__assign_unused_result_in_block.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1146
expression: "\npub fn main() {\n    {\n        Ok(0)\n        Nil\n    }\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    {
        Ok(0)
        ▔▔↑  
        Nil
    }
    Nil
}


----- AFTER ACTION

pub fn main() {
    {
        let _ = Ok(0)
        Nil
    }
    Nil
}
