compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__assign_unused_result_only_first_action.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 1214
expression: "\npub fn main() {\n    Ok(0)\n    Ok(1)\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    Ok(0)
    ▔▔↑  
    Ok(1)
    Nil
}


----- AFTER ACTION

pub fn main() {
    let _ = Ok(0)
    Ok(1)
    Nil
}
