compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__action__convert_inner_let_assert_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
assertion_line: 788
expression: "pub fn main() {\n    let assert [wibble] = {\n        let assert Ok(wobble) = {\n            Ok(1)\n        }\n        [wobble]\n    }\n}"
---
----- BEFORE ACTION
pub fn main() {
    let assert [wibble] = {
        let assert Ok(wobble) = {
                          ↑      
            Ok(1)
        }
        [wobble]
    }
}


----- AFTER ACTION
pub fn main() {
    let assert [wibble] = {
        let wobble = case {
            Ok(1)
        } {
          Ok(wobble) -> wobble
          _ -> panic
        }
        [wobble]
    }
}
